--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "next.config.js"
-, ".storybook/utils/mockRouter.ts"  ],
+    "next.config.js",
+    ".storybook/utils/mockRouter.ts"
+  ],
   "exclude": ["node_modules"]
 }
